--- a/client/src/libs/css/home.css
+++ b/client/src/libs/css/home.css
@@ -1,5 +1,5 @@
 .home-warpper > *{
-    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 .boards-wrapper {
     width: 80%;
@@ -10,11 +10,15 @@
     margin-top: 1rem;
 }
 
+/* wrapper layout */
 
 .setting {
     width: 90%;
     margin-top: 1rem;
     margin-bottom: 1rem;
+}
+.setting button{
+    width: 100px;
 }
 .board {
     padding: 1rem 0 1rem 0;
@@ -28,14 +32,22 @@
     margin-left: 1rem;
 }
 .board > *:last-child {
+    flex: 0.5;
     margin-right: 1rem;
     justify-content: flex-end;
 }
 
+/* board thum */
 
+.board .name {
+    font-weight: 600;
+}
+.board .name:hover {
+    cursor: pointer;
+    transform: scale(0.98);
+}
 .board .state {
     flex: 0.7;
-    margin-left: 1rem;
     color: darkslateblue;
 }
 .board .time {
