--- a/client/src/libs/css/index.css
+++ b/client/src/libs/css/index.css
@@ -4,6 +4,7 @@
 @import "button.css";
 /*  component */
 @import "modal.css";
+@import "login.css";
 @import "home.css";
 @import "board.css";
 
@@ -14,13 +15,15 @@ input {
 }
 textarea{
     all: unset;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
     resize: none;
     width: 100%;
-    height: 100%;
-    overflow: auto;
+    overflow-y: hidden;
+    line-height: 1.6;
 }
 
 /* common flex */
+
 .f-r{
     display: flex;
     justify-content: center;
@@ -40,7 +43,7 @@ textarea{
 /* common component */
 
 .title {
-    font-family: cursive;
+    font-family: cursive,'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 50px;
 }
 .error {
@@ -50,9 +53,6 @@ textarea{
 .header {
     margin-top: 1rem;
     margin-bottom: 1rem;
-}
-.login-warpper {
-    margin-top: 250px;
 }
 .bt-wrapper > * {
     margin-left: 10px;
