--- a/client/src/libs/css/button.css
+++ b/client/src/libs/css/button.css
@@ -17,9 +17,17 @@ button:hover {
 button:active {
     transform: scale(0.97);
 }
+.toggle {
+    color: darkslateblue;
+    border-bottom: 2px solid rgba(100, 0, 200, 0.2);
+}
+.toggle:hover{
+    box-shadow: 0 1px 5px rgba(125, 0, 255, 0.2);
+}
 
 .delete {
     color: darkred;
+    border-bottom: 2px solid rgba(125, 0, 0, 0.2);
 }
 .delete:hover {
     box-shadow: 0 1px 5px rgba(255, 0, 0, 0.2);
