--- a/client/src/libs/css/index.css
+++ b/client/src/libs/css/index.css
@@ -7,7 +7,12 @@
 @import "login.css";
 @import "home.css";
 @import "board.css";
+.header {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 
+/* common */
 input {
     all: unset;
     border-bottom: 2px solid rgba(0, 0, 0, 0.2);
@@ -49,10 +54,6 @@ textarea{
 .error {
     font-size: small;
     color: darkred;
-}
-.header {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
 }
 .bt-wrapper > * {
     margin-left: 10px;
