--- a/client/src/libs/css/board.css
+++ b/client/src/libs/css/board.css
@@ -27,10 +27,28 @@
     flex: 1;
     margin-right: 1rem;
 }
+.list > button {
+    margin-top: 1rem;
+    width: 100%;
+    height: 50px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+}
 .note {
+    margin-top: 2px;
     padding: 2rem;
     border-radius: 10px;
     border: 1px solid rgba(0, 0, 0, 0.2);
+    cursor: grab;
+}
+.note > * {
+    cursor: default;
+}
+.note > h1 {
+    font-weight: 800;
+    cursor: pointer;
+}
+.note > h1:hover {
+    transform: scale(1.01);
 }
 .state {
     margin-left: 1rem;
