--- a/client/src/libs/css/index.css
+++ b/client/src/libs/css/index.css
@@ -22,6 +22,19 @@ textarea{
     overflow-y: hidden;
     line-height: 1.6;
 }
+h4{
+    font-weight: 600;
+    margin-bottom: 1rem;
+}
+h5{
+    font-size: small;
+}
+.w {
+    width: 90%;
+}
+.mb {
+    margin-bottom: 1rem;
+}
 
 /* common flex */
 .f {
@@ -51,8 +64,12 @@ textarea{
     font-size: 50px;
 }
 .error {
+    text-align: center;
     font-size: small;
     color: darkred;
+}
+.bt-wrapper {
+    text-align: center;
 }
 .bt-wrapper > * {
     margin-left: 10px;
